# task_manager

./: .README.md  .gitignore  Dockerfile  pyproject.toml
config/: settings.py  urls.py
task_manager/: models.py  serializers.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py
task_manager/tests/: test_models.py  test_views.py
